Prevent footer from covering content

--- a/custom.css
+++ b/custom.css
@@ -27,7 +27,7 @@ html,body{
 }
 
 #body{
-    padding-bottom: 50px;    /* height of footer */
+    padding-bottom: 100px;    /* height of footer */
 }
 
 .content {
